# PRALG

./: .gitignore  CMakeLists.txt  README.md
TP1/: CMakeLists.txt  ReadMe.md  build.sh  functions.cpp  functions.h  main.cpp  matrice.cpp  matrice.h
TP2/: CMakeLists.txt  IntTree.cpp  IntTree.h  main.cpp  reponses.txt
TP3/: CMakeLists.txt  Remarque.txt  eleve.cpp  eleve.h  functions.cpp  functions.h  main.cpp
TP4/: CMakeLists.txt  zipimage.cpp
TP5/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
TP6/: CMakeLists.txt  main.cpp
TP7/: CMakeLists.txt  build.bat  isotopo.cpp  point2d.h  town.h  villes.txt
