cmake_minimum_required(VERSION 3.10)
project(project_name)
find_package(Imagine REQUIRED COMPONENTS Graphics)

if(LINUX)
	add_executable(TP1 main.cpp matrice.cpp matrice.h functions.h functions.cpp)
	target_link_libraries(TP1 Imagine::Graphics)
else()
        add_executable(nom_de_exe main.cpp matrice.cpp matrice.h functions.h functions.cpp)
        target_link_libraries(nom_de_exe Imagine::Graphics)
endif(LINUX)
