cmake_minimum_required(VERSION 3.10)
project(Tree)

if(LINUX)
        find_package(Imagine REQUIRED COMPONENTS Graphics)
	add_executable(TP2 main.cpp)
	target_link_libraries(TP1 Imagine::Graphics)
else()
        set(QT_DIR "C:/ENPC/5.15.2/mingw81_64/lib/cmake/Qt5")
        set(Qt5_DIR "C:/ENPC/5.15.2/mingw81_64/lib/cmake/Qt5")
        find_package(Imagine REQUIRED COMPONENTS Graphics)
        add_executable(TP2 main.cpp matrice.cpp matrice.h functions.h functions.cpp)
        target_link_libraries(TP1 main.cpp)
endif()
