cmake_minimum_required(VERSION 3.10)
project(TP5)


if(LINUX)
        find_package(Imagine REQUIRED COMPONENTS Graphics)
        #set(CMAKE_CXX_STANDARD 11)
	add_executable(TP5 main.cpp lib.h lib.cpp)
        target_link_libraries(TP5 Imagine::Graphics)
else()
        set(QT_DIR "C:/ENPC/5.15.2/mingw81_64/lib/cmake/Qt5")
        set(Qt5_DIR "C:/ENPC/5.15.2/mingw81_64/lib/cmake/Qt5")
        find_package(Imagine REQUIRED COMPONENTS Graphics)
        add_executable(TP5 main.cpp lib.h lib.cpp)
        target_link_libraries(TP5 Imagine::Graphics)
endif()
